# SFP-Master

./: .gitignore  CMakeLists.txt  ChangeLog  README.md  SFP-master.pro  build_all.sh  ch341eeprom.h  ch341funcs.c  ch34x_i2c.c  ch34x_i2c.h  dialogabout.cpp  dialogabout.h  dialogabout.ui  dialogpass.cpp  dialogpass.h  dialogpass.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qhexedit.cpp  resource.qrc  uninstall.sh
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: Bug_report.yml
.github/workflows/: build.yml  codespell.yml
debian/: README.source  changelog  control  copyright  lintian-overrides  lrc.config  sfp-master.doc-base  watch
debian/source/: lintian-overrides
debian/upstream/: metadata
language/: SFP-Master_de_DE.ts  SFP-Master_hu_HU.ts  SFP-Master_it_IT.ts  SFP-Master_pt_BR.ts  SFP-Master_ru_RU.ts  SFP-Master_zh_Hans.ts
other/: SFP-Master.desktop  index.html  io.github.bigbigmdm.sfp-master.metainfo.xml  sfp-master.spec
